# fastq-pair

./: CMakeLists.txt  README.md  fastq_pair.c  fastq_pair.h  main.c
test/: left.fastq  left.single.fastq  right.fastq
